package com.trello.workflow.enums;

public enum Role {
    OWNER,
    ADMIN,
    MEMBER,
    VIEWER
}
