package com.trello.workflow.enums;

public enum Status {
    PENDING,
    ON_HOLD,
    IN_PROGRESS,
    UNDER_REVIEW,
    COMPLETED
}
